# ghost

./: Cargo.toml  README.md
.github/workflows/: rust.yml  test.yml
ci/: ci.sh
config/: config.yml
packaging/: build.sh
packaging/etc/systemd/: ghost.service
packaging/ghost/DEBIAN/: control
src/: main.rs
src/command/: mod.rs
src/executor/: mod.rs
src/poller/: gitlab.rs  mod.rs
